# kickoff

./: .gitignore
docker/: docker-compose.timescale.yaml
python/fastapi-alembic-starter/: .env.example  README.md  docker-compose.yaml  main.py  pyproject.toml
python/fastapi-alembic-starter/alembic/: env.py
python/fastapi-alembic-starter/alembic/versions/: ec4c0a3cbd11_first_migration.py
python/fastapi-alembic-starter/src/: config.py  database.py  dependencies.py  limiter.py  logging.py  middleware.py  security.py
python/fastapi-alembic-starter/src/cli/: database.py  run.py
python/fastapi-alembic-starter/src/exceptions/: base.py  users.py
python/fastapi-alembic-starter/src/models/: __init__.py  user.py
python/fastapi-alembic-starter/src/models/shared/: mixins.py
python/fastapi-alembic-starter/src/repositories/: user.py
python/fastapi-alembic-starter/src/routes/: users.py
python/fastapi-alembic-starter/src/schemas/: auth.py
python/fastapi-alembic-starter/src/services/: user_service.py
settings/: vscode-python.json
